[gd_scene load_steps=2 format=3 uid="uid://c40xd5voaarmt"]

[ext_resource type="Script" path="res://scripts/file_open.gd" id="1_3guuf"]

[node name="file open" type="ColorRect"]
anchors_preset = -1
anchor_left = 0.111
anchor_top = 0.395
anchor_right = 0.919382
anchor_bottom = 0.633926
offset_left = 0.127991
offset_top = 0.0399933
offset_right = -0.128052
offset_bottom = 0.216003
grow_horizontal = 2
color = Color(0, 0.643137, 0.647059, 1)
script = ExtResource("1_3guuf")
metadata/_edit_use_anchors_ = true

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.465
anchor_right = 0.535
anchor_bottom = 0.328
offset_left = 0.359985
offset_right = -0.360016
offset_bottom = 4.984
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Title
"

[node name="name" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.018
anchor_top = 0.369
anchor_right = 0.062
anchor_bottom = 0.59
offset_left = -8.128
offset_top = -3.018
offset_right = 3.448
offset_bottom = 5.02
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "path
"

[node name="path" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.071
anchor_top = 0.393
anchor_right = 0.897
anchor_bottom = 0.59
offset_left = -3.616
offset_top = -1.946
offset_right = 0.287964
offset_bottom = 5.02
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.905
anchor_top = 0.09
anchor_right = 0.973
anchor_bottom = 0.918
offset_left = -11.5549
offset_top = -11.95
offset_right = -7.48291
offset_bottom = -11.966
grow_horizontal = 0
scale = Vector2(1.5, 1.5)

[node name="browse" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "browse"

[node name="open" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "open"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "quit
"

[connection signal="pressed" from="VBoxContainer/browse" to="." method="_on_browse_pressed"]
[connection signal="pressed" from="VBoxContainer/open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
